@@ -23,3 +23,4 @@ Changes in v1.3
 Changes in v1.4
 - Fixed bug where "-" was deleted during Format As You Type. 
 - Improved eventOnDecimalsEntered to only be triggered if necessary.
+- Improve Format As You Type demo by not calling formatCurrency on a SHIFT, HOME or END key
